--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/layout">
@@ -16,7 +15,43 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_marker"
+        android:layout_centerInParent="true"
+        android:src="@mipmap/main_marker"
         android:id="@+id/imageView"
+        android:contentDescription="@string/content_description_marker_image"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="@string/ok"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="64dp"
+        android:visibility="gone"
+        android:onClick="okClick"
+        android:id="@+id/btn_ok_address" />
+
+    <TextView
+        android:text="Dummy address"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:gravity="center"
+        android:padding="16dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="64dp"
+        style="@style/TextAppearance.AppCompat.Large"
+        android:visibility="gone"
+        android:id="@+id/tv_cur_address" />
+
+    <Button
+        android:text="@string/change_address"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_cur_address"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"
+        android:onClick="changeAddressClick"
+        android:id="@+id/btn_find_address" />
 </RelativeLayout>
