--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -51,4 +51,15 @@
         android:id="@+id/imv_center_marker"
         android:contentDescription="@string/content_description_marker_image"
         android:layout_centerHorizontal="true" />
+
+    <ImageButton
+        android:id="@+id/imb_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="8dp"
+        app:srcCompat="@drawable/ic_menu_black_36dp"
+        android:onClick="menuClick"/>
 </RelativeLayout>
