--- a/app/src/main/res/layout/activity_alarm_edit.xml
+++ b/app/src/main/res/layout/activity_alarm_edit.xml
@@ -2,9 +2,10 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="alarmiko.geoalarm.alarm.alarmiko.AlarmActivity">
+    tools:context="alarmiko.geoalarm.alarm.alarmiko.AlarmEditActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
