--- a/app/src/main/res/layout/fragment_alarm_edit.xml
+++ b/app/src/main/res/layout/fragment_alarm_edit.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:orientation="vertical"
-    tools:context="alarmiko.geoalarm.alarm.alarmiko.AlarmActivityFragment">
+    tools:context="alarmiko.geoalarm.alarm.alarmiko.EditAlarmFragment">
 
 
     <LinearLayout
