--- a/app/src/main/res/menu/menu_alarm.xml
+++ b/app/src/main/res/menu/menu_alarm.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="alarmiko.geoalarm.alarm.alarmiko.AlarmActivity">
+    tools:context="alarmiko.geoalarm.alarm.alarmiko.AlarmEditActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
