--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,31 @@
 <resources>
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="vibrate_toggle_size">48dp</dimen>
     <dimen name="item_margin_between_elements">4dp</dimen>
-    <dimen name="text_size_medium">18sp</dimen>
     <dimen name="text_compound_drawable_padding">10dp</dimen>
     <dimen name="button_text_right_padding">16dp</dimen>
+
+    <dimen name="text_size_body_1">14sp</dimen>
+    <dimen name="text_size_body_2">14sp</dimen>
+    <dimen name="text_size_button">14sp</dimen>
+    <dimen name="text_size_caption">12sp</dimen>
+    <dimen name="text_size_display_1">34sp</dimen>
+    <dimen name="text_size_display_2">45sp</dimen>
+    <dimen name="text_size_display_3">56sp</dimen>
+    <dimen name="text_size_display_4">112sp</dimen>
+    <dimen name="text_size_headline">24sp</dimen>
+    <dimen name="text_size_large">22sp</dimen>
+    <dimen name="text_size_medium">18sp</dimen>
+    <dimen name="text_size_menu">16sp</dimen>
+    <dimen name="text_size_small">14sp</dimen>
+    <dimen name="text_size_subhead">16sp</dimen>
+    <dimen name="text_size_subtitle_toolbar">16dp</dimen>
+    <dimen name="text_size_title">20sp</dimen>
+    <dimen name="text_size_title_toolbar">20dp</dimen>
+    <dimen name="fab_total_height">88dp</dimen>
+    <dimen name="item_padding_start">16dp</dimen>
+    <dimen name="item_padding_end">16dp</dimen>
 </resources>
