edit alarm bind improved

--- a/app/src/main/res/layout/fragment_alarmitem.xml
+++ b/app/src/main/res/layout/fragment_alarmitem.xml
@@ -47,7 +47,7 @@
             android:singleLine="true"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
-        <Switch
+        <android.support.v7.widget.SwitchCompat
             android:id="@+id/alarm_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
