--- a/app/src/main/res/layout/fragment_alarm_edit.xml
+++ b/app/src/main/res/layout/fragment_alarm_edit.xml
@@ -22,14 +22,14 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/editor_alias"
+            <TextView
+                android:id="@+id/tv_street"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@android:color/transparent"
-                android:hint="@string/alias"
                 android:padding="8dp"
+                android:text="@string/alias"
                 android:textSize="40sp" />
 
 
@@ -109,6 +109,15 @@
                 style="@style/AlarmDayToggle"/>
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/tv_label"
+            style="@style/BaseLabel"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginBottom="@dimen/item_margin_between_elements"
+            android:background="?android:attr/selectableItemBackground"
+            android:gravity="center_vertical"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -121,13 +130,13 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="?android:attr/selectableItemBackground"
-                android:text="@string/ringtone"
-                android:gravity="center_vertical"
-                android:textAppearance="@style/TextAppearance.AppCompat"
-                android:textSize="@dimen/text_size_medium"
-                android:drawableStart="@drawable/ic_ringtone_24dp"
                 android:drawableLeft="@drawable/ic_ringtone_24dp"
-                android:drawablePadding="@dimen/text_compound_drawable_padding"/>
+                android:drawablePadding="@dimen/text_compound_drawable_padding"
+                android:drawableStart="@drawable/ic_ringtone_24dp"
+                android:gravity="center_vertical"
+                android:text="@string/ringtone"
+                android:textAppearance="@style/TextAppearance.AppCompat"
+                android:textSize="@dimen/text_size_medium" />
 
             <alarmiko.geoalarm.alarm.alarmiko.ui.TempCheckableImageButton
                 android:id="@+id/vibrate"
@@ -139,6 +148,7 @@
             android:id="@+id/dismiss"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:text="@string/dismiss_now"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_marginBottom="@dimen/item_margin_between_elements"
