--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -54,14 +54,13 @@
         <item name="android:layout_height">match_parent</item>
     </style>
 
-    <style name="BaseLabel" parent="TextAppearance.AppCompat">
+    <style name="BaseLabel" parent="TextAppearance.AppCompat.Large">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:hint">@string/label</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">1</item>
         <item name="android:padding">8dp</item>
-        <item name="android:textSize">@dimen/text_size_subhead</item>
     </style>
 
 
