--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -13,14 +13,15 @@
         android:layout_centerInParent="true"/>
 
     <Button
-        android:text="@string/ok"
+        android:text="@string/next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="64dp"
-        android:alpha="0"
-        android:onClick="okClick"
+        android:textSize="20sp"
+        android:alpha="1"
+        android:background="?selectableItemBackground"
         android:id="@+id/btn_ok_address" />
 
     <alarmiko.geoalarm.alarm.alarmiko.ui.AddressView
@@ -37,8 +38,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/address_view"
         android:layout_centerHorizontal="true"
-        android:alpha="0"
-        android:onClick="changeAddressClick"
+        android:visibility="invisible"
+        android:textSize="20sp"
+        android:background="?selectableItemBackground"
         android:id="@+id/btn_find_address" />
 
     <ImageView
@@ -53,12 +55,21 @@
 
     <ImageButton
         android:id="@+id/imb_menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_margin="8dp"
-        app:srcCompat="@drawable/ic_menu_black_36dp"
-        android:onClick="menuClick"/>
+        android:layout_margin="@dimen/map_button_margin"
+        android:src="@drawable/ic_menu_black_36dp"
+        android:background="@drawable/round_button"/>
+
+    <ImageButton
+        android:id="@+id/imb_location"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="@dimen/map_button_margin"
+        android:src="@drawable/ic_my_location_black_24dp"
+        android:background="@drawable/round_button"/>
 </RelativeLayout>
