--- a/app/src/main/res/layout/activity_ringtone.xml
+++ b/app/src/main/res/layout/activity_ringtone.xml
@@ -10,6 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginLeft="@dimen/text_margin"
+        android:layout_marginRight="@dimen/text_margin"
         android:orientation="vertical"
         android:gravity="center_horizontal">
 
@@ -17,8 +19,10 @@
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:layout_marginBottom="@dimen/item_margin_between_elements"
-            style="@style/TextAppearance.AppCompat.Title"/>
+            style="@style/TextAppearance.AppCompat.Title"
+            android:textSize="@dimen/text_size_display_1"/>
 
     </LinearLayout>
 
