--- a/app/src/main/res/layout/address_view_layout.xml
+++ b/app/src/main/res/layout/address_view_layout.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:maxLines="3"
         style="@style/TextAppearance.AppCompat.Large"
         android:id="@+id/tv_address_view" />
 
