--- a/app/src/main/res/layout/content_header_geo_alarm_activity.xml
+++ b/app/src/main/res/layout/content_header_geo_alarm_activity.xml
@@ -3,4 +3,5 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     style="@style/TextAppearance.AppCompat"
+    android:gravity="center"
     android:textSize="@dimen/text_size_display_1" />
