alarmiko 1.0 added content provider

--- a/app/src/main/res/layout/alarmiko_widget.xml
+++ b/app/src/main/res/layout/alarmiko_widget.xml
@@ -26,6 +26,7 @@
         android:id="@+id/appwidget_divider_left"
         style="@style/Divider.Vertical"
         android:background="@android:color/white"
+        android:contentDescription="@string/divider_line"
         android:visibility="gone"/>
 
     <LinearLayout
@@ -62,6 +63,7 @@
         android:id="@+id/appwidget_divider_right"
         style="@style/Divider.Vertical"
         android:background="@android:color/white"
+        android:contentDescription="@string/divider_line"
         android:visibility="gone"/>
 
     <TextView
