--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -60,6 +60,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_margin="@dimen/map_button_margin"
+        android:contentDescription="@string/menu_button"
         android:src="@drawable/ic_menu_black_36dp"
         android:background="@drawable/round_button"/>
 
@@ -70,6 +71,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:layout_margin="@dimen/map_button_margin"
+        android:contentDescription="@string/location_button"
         android:src="@drawable/ic_my_location_black_24dp"
         android:background="@drawable/round_button"/>
 </RelativeLayout>
