--- a/app/src/main/res/layout/fragment_recycler_view.xml
+++ b/app/src/main/res/layout/fragment_recycler_view.xml
@@ -31,6 +31,7 @@
         app:pressedTranslationZ="6dp"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        android:contentDescription="@string/appwidget_add_alarm"
         android:src="@drawable/ic_add_alarm" />
 
 </FrameLayout>
